--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cola_redis",
-  "version": "1.0.1",
-  "description": "Gestión de una cola de procesos con gestión de Reintentos, Concurrencia y Fujo",
+  "version": "1.0.2",
+  "description": "Gestión de una cola de procesos con gestión de Reintentos, Concurrencia y Cadencia",
   "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
